deploy/kustomize/base/garage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    app.kubernetes.io/part-of: netsoldier
